--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -106,7 +106,7 @@ jobs:
 
   core:
     name: Build Core wheels ${{ matrix.abi }} for ${{ matrix.arch }} (musllinux_1_2)
-    if: github.repository_owner == 'home-assistant'
+    if: false && github.repository_owner == 'home-assistant'
     needs: init
     runs-on: ubuntu-latest
     strategy:
@@ -208,9 +208,27 @@ jobs:
           touch requirements_old-cython.txt
           cat homeassistant/package_constraints.txt | grep 'pydantic==' >> requirements_old-cython.txt
 
+      - name: Create requirements file for custom build
+        run: |
+          touch requirements_custom.txt
+
+      - name: Build wheels (custom)
+        uses: cdce8p/wheels@master
+        with:
+          abi: ${{ matrix.abi }}
+          tag: musllinux_1_2
+          arch: ${{ matrix.arch }}
+          wheels-key: ${{ secrets.WHEELS_KEY }}
+          env-file: true
+          apk: "bluez-dev;libffi-dev;openssl-dev;glib-dev;eudev-dev;libxml2-dev;libxslt-dev;libpng-dev;libjpeg-turbo-dev;tiff-dev;cups-dev;gmp-dev;mpfr-dev;mpc1-dev;ffmpeg-dev;gammu-dev;yaml-dev;openblas-dev;fftw-dev;lapack-dev;gfortran;blas-dev;eigen-dev;freetype-dev;glew-dev;harfbuzz-dev;hdf5-dev;libdc1394-dev;libtbb-dev;mesa-dev;openexr-dev;openjpeg-dev;uchardet-dev;nasm"
+          skip-binary: aiohttp;charset-normalizer;grpcio;multidict;SQLAlchemy;propcache;protobuf;pymicro-vad;yarl
+          constraints: "homeassistant/package_constraints.txt"
+          requirements-diff: "requirements_diff.txt"
+          requirements: "requirements_custom.txt"
+
       - name: Build wheels (old cython)
         uses: home-assistant/wheels@2024.11.0
-        if: matrix.abi == 'cp312'
+        if: false && matrix.abi == 'cp312'
         with:
           abi: ${{ matrix.abi }}
           tag: musllinux_1_2
@@ -226,6 +244,7 @@ jobs:
 
       - name: Build wheels (part 1)
         uses: home-assistant/wheels@2024.11.0
+        if: false
         with:
           abi: ${{ matrix.abi }}
           tag: musllinux_1_2
@@ -240,6 +259,7 @@ jobs:
 
       - name: Build wheels (part 2)
         uses: home-assistant/wheels@2024.11.0
+        if: false
         with:
           abi: ${{ matrix.abi }}
           tag: musllinux_1_2
@@ -254,6 +274,7 @@ jobs:
 
       - name: Build wheels (part 3)
         uses: home-assistant/wheels@2024.11.0
+        if: false
         with:
           abi: ${{ matrix.abi }}
           tag: musllinux_1_2
